rename cmake files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,11 +23,11 @@ if (target)
   message (FATAL_ERROR "The target option has been removed - use native cmake options to control build")
 endif ()
 
-include(RippledSanity)
-include(RippledVersion)
-include(RippledSettings)
-include(RippledNIH)
-include(RippledRelease)
+include(XrpldSanity)
+include(XrpldVersion)
+include(XrpldSettings)
+include(XrpldNIH)
+include(XrpldRelease)
 # this check has to remain in the top-level cmake
 # because of the early return statement
 if (packages_only)
@@ -36,8 +36,8 @@ if (packages_only)
   endif()
   return ()
 endif ()
-include(RippledCompiler)
-include(RippledInterface)
+include(XrpldCompiler)
+include(XrpldInterface)
 
 ###
 
@@ -60,9 +60,9 @@ include(deps/Postgres)
 
 ###
 
-include(RippledCore)
-include(RippledInstall)
-include(RippledCov)
-include(RippledMultiConfig)
-include(RippledDocs)
-include(RippledValidatorKeys)
+include(XrpldCore)
+include(XrpldInstall)
+include(XrpldCov)
+include(XrpldMultiConfig)
+include(XrpldDocs)
+include(XrpldValidatorKeys)
