more renaming of ripple | rippled to xrpl | xrpld

--- a/.gitignore
+++ b/.gitignore
@@ -82,7 +82,7 @@ DerivedData
 *.hmap
 
 # Intel Parallel Studio 2013 XE
-My Amplifier XE Results - RippleD
+My Amplifier XE Results - XrplD
 
 # Compiler intermediate output
 /out.txt
