--- a/cfg/xrpld-example.cfg
+++ b/cfg/xrpld-example.cfg
@@ -9,7 +9,7 @@
 #
 #   2. Peer Protocol
 #
-#   3. Ripple Protocol
+#   3. XRPL Protocol
 #
 #   4. HTTPS Client
 #
@@ -370,7 +370,7 @@
 #
 #   These settings control security and access attributes of the Peer to Peer
 #   server section of the xrpld process. Peer Protocol implements the
-#   Ripple Payment protocol. It is over peer connections that transactions
+#   XRPL Payment protocol. It is over peer connections that transactions
 #   and validations are passed from to machine to machine, to determine the
 #   contents of validated ledgers.
 #
@@ -378,7 +378,7 @@
 #
 # [ips]
 #
-#   List of hostnames or ips where the Ripple protocol is served.  A default
+#   List of hostnames or ips where the XRPL protocol is served.  A default
 #   starter list is included in the code and used if no other hostnames are
 #   available.
 #
@@ -404,7 +404,7 @@
 #   List of IP addresses or hostnames to which xrpld should always attempt to
 #   maintain peer connections with. This is useful for manually forming private
 #   networks, for example to configure a validation server that connects to the
-#   Ripple network through a public-facing server, or for building a set
+#   XRPL network through a public-facing server, or for building a set
 #   of cluster peers.
 #
 #   One address or domain names per line is allowed. A port must be specified
@@ -808,7 +808,7 @@
 #
 #   The xrpld server instance uses HTTPS GET requests in a variety of
 #   circumstances, including but not limited to contacting trusted domains to
-#   fetch information such as mapping an email address to a Ripple Payment
+#   fetch information such as mapping an email address to a XRPL Payment
 #   Network address.
 #
 # [ssl_verify]
@@ -1370,7 +1370,7 @@
 #
 #----------
 #
-#   The vote settings configure settings for the entire Ripple network.
+#   The vote settings configure settings for the entire XRPL network.
 #   While a single instance of xrpld cannot unilaterally enforce network-wide
 #   settings, these choices become part of the instance's vote during the
 #   consensus process for each voting ledger.
@@ -1630,7 +1630,7 @@ online_delete=512
 advisory_delete=0
 
 # This is the persistent datastore for shards. It is important for the health
-# of the ripple network that xrpld operators shard as much as practical.
+# of the xrpl network that xrpld operators shard as much as practical.
 # NuDB requires SSD storage. Helpful information can be found at
 # https://xrpl.org/history-sharding.html
 #[shard_db]
